--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "start": "npm run build && npm run build:run "
   },
   "dependencies": {
-    "@types/sequelize": "^4.27.30",
     "apollo-server": "^2.2.2",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
+    "moment": "^2.22.2",
     "sequelize": "^4.41.0",
     "tedious": "^3.0.1",
-    "tslint": "^5.11.0"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@types/graphql": "^14.0.3"
+	"@types/sequelize": "^4.27.30",
+    "@types/graphql": "^14.0.3",
+	"@types/uuid": "^3.4.4",
+	"tslint": "^5.11.0"
   }
 }
